# Aricoin

./: COPYING  INSTALL  Makefile.am  README.md  aclocal.m4  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1t
contrib/: README.md  aricoin-qt.pro  aricoind.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  aricoin-qt.desktop  aricoin-qt.install  aricoin-qt.lintian-overrides  aricoin-qt.protocol  aricoind.bash-completion  aricoind.examples  aricoind.install  aricoind.lintian-overrides  aricoind.manpages  changelog  control  copyright  rules  watch
contrib/debian/examples/: aricoin.conf
contrib/debian/manpages/: aricoin-qt.1  aricoin.conf.5  aricoind.1
contrib/devtools/: README.md  fix-copyright-headers.py  update-translations.py
contrib/gitian-descriptors/: README.md  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-osx-aricoin.yml  gitian-win.yml  qt-win.yml
contrib/gitian-downloader/: linux-download-config  win32-download-config
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/macbuild/aricoind.xcodeproj/: project.pbxproj
contrib/macbuild/aricoind.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
contrib/macdeploy/: DS_Store  LICENSE  README.md  background.psd  fancy.plist  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verifysfbinaries/: verify.sh
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  bootstrap.md  build-msw.md  build-osx.md  build-unix.md  coding.md  gitian-building.md  multiwallet-qt.md  release-process.md  tor.md  translation_process.md  unit-tests.md
qa/pull-tester/: build-tests.sh.in  pull-tester.py  run-aricoind-for-test.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  listtransactions.py  send.sh  skeleton.py  txnmall.sh  util.py  util.sh  wallet.sh  walletbackup.sh
qa/rpc-tests/python-bitcoinrpc/: setup.py
share/: setup.nsi.in  ui.rc
share/certs/: AricoinFoundation_Apple_Cert.pem  AricoinFoundation_Comodo_Cert.pem  PrivateKeyNotes.md
share/qt/: Info.plist  Info.plist.in  extract_strings_qt.py  make_windows_icon.sh
src/: Makefile.am  Makefile.include  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  aricoin-cli-res.rc  aricoin-cli.cpp  aricoin-config.h  aricoind-res.rc  aricoind.cpp  auxpow.h  base58.cpp  base58.h  bignum.h  bloom.cpp  bloom.h  chainparams.cpp  chainparams.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  core.cpp  core.h  crypter.cpp  crypter.h  db.cpp  db.h  hash.h  init.cpp  init.h  key.cpp  key.h  keystore.cpp  (+55 more)
src/compat/: glibc_compat.cpp
src/json/: LICENSE.txt  json_spirit_value.h  json_spirit_writer_template.h
src/leveldb/: LICENSE
src/leveldb/port/: port_win.cc  port_win.h
src/m4/: aricoin_find_bdb48.m4  aricoin_find_bdb51.m4  aricoin_qt.m4  aricoin_subdir_to_include.m4
src/qt/: Makefile.am  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  aricoin.cpp  aricoin.qrc  aricoinaddressvalidator.cpp  aricoinaddressvalidator.h  aricoinamountfield.cpp  aricoinamountfield.h  aricoingui.cpp  aricoingui.h  aricoinstrings.cpp  aricoinunits.cpp  aricoinunits.h  askpassphrasedialog.cpp  askpassphrasedialog.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  monitoreddatamapper.cpp  monitoreddatamapper.h  notificator.cpp  (+60 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  paperwalletdialog.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui  ui_aboutdialog.h  ui_coincontroldialog.h  ui_helpmessagedialog.h  ui_intro.h  ui_optionsdialog.h  ui_overviewpage.h  ui_paperwalletdialog.h  ui_receivecoinsdialog.h  ui_rpcconsole.h  ui_sendcoinsdialog.h  ui_sendcoinsentry.h  ui_signverifymessagedialog.h
src/qt/locale/: aricoin_ach.ts  aricoin_af_ZA.qm  aricoin_af_ZA.ts  aricoin_ar.qm  aricoin_ar.ts  aricoin_be_BY.qm  aricoin_be_BY.ts  aricoin_bg.qm  aricoin_bg.ts  aricoin_bs.qm  aricoin_bs.ts  aricoin_ca.ts  aricoin_ca@valencia.qm  aricoin_ca@valencia.ts  aricoin_ca_ES.qm  aricoin_ca_ES.ts  aricoin_cmn.ts  aricoin_cs.qm  aricoin_cs.ts  aricoin_cy.qm  aricoin_cy.ts  aricoin_da.qm  aricoin_da.ts  aricoin_de.qm  aricoin_de.ts  aricoin_de_AT.qm  aricoin_de_AT.ts  aricoin_el_GR.qm  aricoin_el_GR.ts  aricoin_en.qm  aricoin_en.ts  aricoin_eo.qm  aricoin_eo.ts  aricoin_es.qm  aricoin_es.ts  aricoin_es_CL.qm  aricoin_es_CL.ts  aricoin_es_DO.qm  aricoin_es_DO.ts  aricoin_es_MX.qm  (+94 more)
src/qt/res/: aricoin-qt-res.rc  aricoin-qt.rc
src/qt/res/icons/: aricoin.icns
src/qt/test/: Makefile.am  Makefile.in  aricoinunitstests.cpp  aricoinunitstests.h  test_main.cpp  uritests.cpp
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile.am  Makefile.in  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  canonical_tests.cpp  checkblock_tests.cpp  compress_tests.cpp  getarg_tests.cpp  hash_tests.cpp  hmac_tests.cpp  key_tests.cpp  main_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  serialize_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  test_aricoin.cpp  transaction_tests.cpp  uint256_tests.cpp  util_tests.cpp  wallet_tests.cpp
src/test/data/: README.md
